tests/ui/type-alias-impl-trait/issue-53096.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-53096.rs:11:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

